--- a/ctrlx_main.html
+++ b/ctrlx_main.html
@@ -77,8 +77,10 @@
         CtrlX - AI Consultancy Services
     </header>
     <nav>
-        <a href="#about">About</a>
+        <a href="#home">Home</a>
         <a href="#services">Services</a>
+        <a href="#insights">Insights</a>
+        <a href="#about">About</a>
         <a href="#contact">Contact</a>
     </nav>
     <div class="container">
